--- a/magento2/INSTALL.txt
+++ b/magento2/INSTALL.txt
@@ -1,3 +1,5 @@
+This code only works with Magento 2.0->2.1. For newer versions please look into your Netopia account under the Implementation - Examples menu.
+
 =======================================================================
 	INSTALLATION
 =======================================================================
