--- a/app/code/Netopia/Netcard/i18n/en_US.csv
+++ b/app/code/Netopia/Netcard/i18n/en_US.csv
@@ -6,6 +6,6 @@ cc_number,"Credit Card Number"
 "Completeaza datele","Completeaza datele"
 "Tip cumparator","Tip cumparator"
 "payment method","Alegeti metoda de plata"
-"card payemnt","Plata cu card bancar‎"
+"payment by bank card","Plata cu card bancar"
 "crypto payment","Plăți prin criptomonede"
 "mobilPayWALLET","Plăți prin mobilPay WALLET"
